# regenerate

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  alembic.ini  cloud-run.yaml  cloudbuild.yaml  deploy.sh  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_add_user_and_profile_history_tables.py  002_add_oauth_fields_to_users.py  003_add_video_fields_to_profile_history.py  004_add_auth_fields_to_users.py  005_add_privacy_table.py  006_add_segment_videos_to_profile_history.py
app/: __init__.py  main.py
app/api/: __init__.py  auth.py  privacy.py  profile.py  routes.py  websocket.py
app/core/: config.py  dependencies.py  logging.py  security.py
app/db/: base.py  retry.py  session.py
app/models/: __init__.py  privacy.py  user.py
app/prompts/: __init__.py  journey_prompts.py  profile_prompts.py  task_prompts.py  video_prompts.py
app/schemas/: __init__.py  auth.py  gemini_schemas.py  privacy.py  profile.py
app/services/: __init__.py  linkedin_service.py  profile_service.py  profile_service_legacy.py  storage_service.py  task_orchestrator.py  video_generator.py  web_scraper.py
app/services/orchestrator/: __init__.py  models.py  orchestrator.py
app/services/orchestrator/handlers/: __init__.py  base.py  enrich_profile.py  fetch_profile.py  journey_handlers.py  video.py
app/services/orchestrator/utils/: __init__.py  parsing.py
app/tests/: test_profile_persistence.py
frontend/: .dockerignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: App.tsx  app.css
frontend/src/components/: AuthModal.css  AuthModal.tsx  GlobeBackground.tsx  Hero.css  Hero.tsx  ImmersiveAudio.tsx  JourneyBackground.tsx  ThemeToggle.css  ThemeToggle.tsx  ThreeBackground.tsx
frontend/src/components/journey/: CertificationsSection.css  CertificationsSection.tsx  DocumentaryEditModal.css  DocumentaryEditModal.tsx  DocumentaryPlayer.css  DocumentaryPlayer.tsx  DocumentarySection.css  DocumentarySection.tsx  EducationSection.css  EducationSection.tsx  ExperienceSection.css  ExperienceSection.tsx  HeroSection.css  HeroSection.tsx  PassportEditModal.css  PassportEditModal.tsx  ProjectsSection.css  ProjectsSection.tsx  SectionDataEditor.css  SectionDataEditor.tsx  SkillsSection.css  SkillsSection.tsx  TimelineSection.css  TimelineSection.tsx  VideoGenerationModal.css  VideoGenerationModal.tsx  sectionEditorConfig.ts
frontend/src/components/profile/: HistoryTab.css  HistoryTab.tsx  PrivacyTab.tsx  ProfileModal.css  ProfileModal.tsx  ProfileTab.tsx
frontend/src/hooks/: useAuth.tsx  useTheme.tsx
frontend/src/pages/: Home.css  Home.tsx  Journey.css  Journey.tsx  Regen.css  Regen.tsx
scripts/: dev-start.sh  migrate.sh  storage.sh
